2007-03-05  Johan Euphrosine  <proppy@aminche.com>

	*  added pot chips display
	*  added bet chips display
	*  added hierarchy for seat widget, using transform for name and money label

2007-05-05  Johan Euphrosine  <proppy@aminche.com>

	*  added player name and money display

2007-03-03  Johan Euphrosine  <proppy@aminche.com>

	*  card hide/show refactor
	*  card animation
	*  player arrive packet handling

2007-03-01  Johan Euphrosine  <proppy@aminche.com>

	*  added layer for layout and fixed card position

2007-02-28  Johan Euphrosine  <proppy@aminche.com>

	*  new table gfx with named anchor

2007-02-26  Johan Euphrosine  <proppy@aminche.com>

	*  split qpoker2d.py into qpoker.py and qpokerwidget.py
	*  added test for qpokerwidget.py

2007-02-26  Johan Euphrosine  <proppy@aminche.com>

	*  initial import
